--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a class="menu" href="index.html">Главная</a>
-    <a class="menu" href="./catalog/catalog.html">Каталог</a>
-    <a class="menu" href="contacts.html">Контакты</a>
+    <a href="https://evgeniiatogochakova.github.io/Some_tasks_40/index.html">Главная</a>
+    <a href="https://evgeniiatogochakova.github.io/Some_tasks_40/catalog/catalog.html">Каталог</a>
+    <a href="https://evgeniiatogochakova.github.io/Some_tasks_40/contacts.html">Контакты</a>
     <h1 class="h1-tag">Главная страница</h1>
     <p class="parag">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ducimus iure delectus quasi mollitia atque nobis, voluptatibus excepturi qui quia aliquid nostrum, officiis obcaecati doloribus nesciunt natus animi ipsa accusamus!</p>
     <h2 class="h2-tag">Добро пожаловать на&nbsp;сайт!</h2>
