Fixed paths in catalog.html

--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <a class="menu" href="../index.html">Главная</a>
-    <a class="menu" href="./catalog/catalog.html">Каталог</a>
-    <a class="menu" href="../contacts.html">Контакты</a>
+    <a href="https://evgeniiatogochakova.github.io/Some_tasks_40/index.html">Главная</a>
+    <a href="https://evgeniiatogochakova.github.io/Some_tasks_40/catalog/catalog.html">Каталог</a>
+    <a href="https://evgeniiatogochakova.github.io/Some_tasks_40/contacts.html">Контакты</a>
     <h1 class="h1-tag">Каталог</h1>
     <p class="parag">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quidem eum nemo similique amet qui ducimus,
         rem deserunt alias adipisci velit expedita eveniet maxime incidunt provident consectetur quos quas reprehenderit
