Fixed paths in contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a class="menu" href="index.html">Главная</a>
-    <a class="menu" href="./catalog/catalog.html">Каталог</a>
-    <a class="menu" href="contacts.html">Контакты</a>
+    <a href="https://evgeniiatogochakova.github.io/Some_tasks_40/index.html">Главная</a>
+    <a href="https://evgeniiatogochakova.github.io/Some_tasks_40/catalog/catalog.html">Каталог</a>
+    <a href="https://evgeniiatogochakova.github.io/Some_tasks_40/contacts.html">Контакты</a>
     <h1 class="h1-tag">This web page is in its final stages of development. Coming soon!</h1>
 </body>
 </html>
